<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosecategory" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioGroup_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_cc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cc_1" />

            <RadioButton
                android:id="@+id/radio_cc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_2" />

            <RadioButton
                android:id="@+id/radio_cc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_3" />

            <RadioButton
                android:id="@+id/radio_cc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_4" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/bt_sure"
            android:layout_width="120px"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/sure" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="120px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.13"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>