<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3px" >

        <LinearLayout
            android:id="@+id/ll_editmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7418022912.00"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/cb_rememberpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码" />

            <LinearLayout
                android:id="@+id/ll_mainpanel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/bt_connect"
                    android:layout_width="120px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.29"
                    android:text="@string/start_connect" />

                <Button
                    android:id="@+id/bt_modify_pw"
                    android:layout_width="120px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/modify_pw" />

                <Button
                    android:id="@+id/bt_search"
                    android:layout_width="120px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.27"
                    android:text="@string/search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_modify_pw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3px"
                android:orientation="vertical"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/et_newpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/et_confimpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5px"
                    android:hint="@string/confimpassword"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/bt_sure"
                        android:layout_width="120px"
                        android:layout_height="wrap_content"
                        android:text="@string/sure" />

                    <Button
                        android:id="@+id/bt_cancel"
                        android:layout_width="120px"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20px"
                        android:text="@string/cancel" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_successmode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_login_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/success_login_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_login_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/init_time"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_off_line"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/off_line" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/miniAdLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" />
</RelativeLayout>